# local-search

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: decisions.md  todo-list.md
scripts/tests/: run_all.sh
src/local_search/: cli.py  config.py  ingest.py  paths.py  storage.py  text.py  web_search.py
src/local_search/test/: conftest.py  test_inspect.py  test_search.py
test_data/: sample.txt
